---------------------------------------------------------------------------------------------------
Version: 3.3.0
Date: ????
  Features:
    - Added Korean locale (#97) (x2605)
    - Added visual mode to the search GUI, providing a more vanilla-like search interface
      - This interface can only show items and fluids
  Changes:
    - Fluid temperature variants are now sorted and placed adjacent to their base fluid in search results
    - Refactored all GUI code to improve modularity and significantly cleaned up the codebase
  Bugfixes:
    - Fixed "can mine" table header being unlocalised
---------------------------------------------------------------------------------------------------
Version: 3.2.3
Date: 2022-01-08
  Bugfixes:
    - Fixed a rare crash during migrations (#90)
    - Fixed a crash when a mod creates a force before the recipe book can be built (#94)
---------------------------------------------------------------------------------------------------
Version: 3.2.2
Date: 2021-12-06
  Changes:
    - "--- categories" lists are hidden by default
    - Improved some of the list header names
  Bugfixes:
    - Fixed that quick ref windows would not open when the info GUI is docked (#87)
---------------------------------------------------------------------------------------------------
Version: 3.2.1
Date: 2021-11-09
  Changes:
    - Updated Russian locale (by Astorin)
  Bugfixes:
    - Added missing migration for GUI data from 3.2.0
---------------------------------------------------------------------------------------------------
Version: 3.2.0
Date: 2021-11-07
  Features:
    - Added new pages:
      - Equipment category: All equipment and items belonging to each category
      - Equipment: Size, take result, equipment properties, compatible fuels, fuel categories, equipment categories, and unlocked by for each equipment
    - Added compatible equipment and equipment categories to the item page
    - Added fuel categories to burner machine page