@@ -8,6 +8,7 @@ constants.burner_classes = {
   "mining_drill",
   "offshore_pump",
   -- These are intentionally out of order so they show up last in lists
+  "generator",
   "machine",
   "equipment",
 }
@@ -34,6 +35,7 @@ constants.classes = {
   "equipment_category",
   "fluid",
   "fuel_category",
+  "generator",
   "group",
   "item",
   "lab",
@@ -53,6 +55,7 @@ constants.class_to_font_glyph = {
   equipment = "H",
   fluid = "B",
   fuel_category = "G",
+  generator = "E",
   group = "G",
   item = "C",
   lab = "D",
@@ -72,6 +75,7 @@ constants.class_to_type = {
   equipment = "equipment",
   fluid = "fluid",
   fuel_category = false,
+  generator = "entity",
   group = "item-group",
   item = "item",
   lab = "entity",
@@ -134,7 +138,7 @@ constants.derived_type_to_class = {
   ["fluid"] = "fluid",
   ["fuel-category"] = "fuel_category",
   ["furnace"] = "crafter",
-  ["generator"] = "machine",
+  ["generator"] = "generator",
   ["inserter"] = "machine",
   ["item-group"] = "group",
   ["item"] = "item",
@@ -326,6 +330,8 @@ constants.gui_strings = {
   accepted_modules = { "gui.rb-accepted-modules" },
   alt_click = { "gui.rb-alt-click" },
   attach_search_results = { "gui.rb-attach-search-results" },
+  base_pollution_desc = { "gui.rb-base-pollution-desc" },
+  base_pollution = { "gui.rb-base-pollution" },
   burned_in = { "gui.rb-burned-in" },
   burnt_result = { "gui.rb-burnt-result" },
   burnt_result_of = { "gui.rb-burnt-result-of" },
@@ -359,6 +365,7 @@ constants.gui_strings = {
   equipment = { "gui.rb-equipment" },
   equipment_properties = { "gui.rb-equipment-properties" },
   fixed_recipe = { "gui.rb-fixed-recipe" },
+  fluid_consumption = { "gui.rb-fluid-consumption" },
   fluid = { "gui.rb-fluid" },
   fluids = { "gui.rb-fluids" },
   format_amount = { "gui.rb-format-amount" },
@@ -373,6 +380,7 @@ constants.gui_strings = {
   fuel_value = { "description.fuel-value" },
   fuzzy_search = { "gui.rb-fuzzy-search" },
   general = { "gui.rb-general" },
+  generator = { "gui.rb-generator" },
   get_blueprint = { "gui.rb-get-blueprint" },
   go_backward = { "gui.rb-go-backward" },
   go_forward = { "gui.rb-go-forward" },
@@ -393,10 +401,13 @@ constants.gui_strings = {
   logistic_radius = { "gui.rb-logistic-radius" },
   machine = { "gui.rb-machine" },
   made_in = { "gui.rb-made-in" },
+  max_energy_production = { "gui.rb-max-energy-production" },
+  maximum_temperature = { "gui.rb-maximum-temperature" },
   max_rows = { "gui.rb-max-rows" },
   middle_click = { "gui.rb-middle-click" },
   mined_by = { "gui.rb-mined-by" },
   mined_from = { "gui.rb-mined-from" },
+  minimum_temperature = { "gui.rb-minimum-temperature" },
   mining_area = { "gui.rb-mining-area" },
   mining_drill = { "gui.rb-mining-drill" },
   mining_drills = { "gui.rb-mining-drills" },
@@ -551,6 +562,10 @@ constants.interactions = {
     { modifiers = {}, action = "view_details" },
     { button = "middle", modifiers = {}, action = "view_details_in_new_window" },
   },
+  generator = {
+    { modifiers = {}, action = "view_details" },
+    { button = "middle", modifiers = {}, action = "view_details_in_new_window" },
+  },
   group = {
     { modifiers = {}, action = "view_details" },
     { button = "middle", modifiers = {}, action = "view_details_in_new_window" },
@@ -636,6 +651,7 @@ constants.interface_version = 4
 
 constants.machine_classes = {
   "crafter",
+  "generator",
   "lab",
   "mining_drill",
   "offshore_pump",
@@ -722,6 +738,29 @@ constants.pages = {
   fuel_category = {
     { type = "list_box", source = "fluids" },
     { type = "list_box", source = "items" },
+  },
+
+  generator = {
+    {
+      type = "table",
+      label = "general",
+      hide_count = true,
+      rows = {
+        { type = "plain", source = "fluid_consumption", formatter = "per_second" },
+        { type = "plain", source = "maximum_temperature", formatter = "temperature" },
+        { type = "plain", source = "max_energy_production", formatter = "energy" },
+        {
+          type = "plain",
+          source = "base_pollution",
+          label_tooltip = "base_pollution_desc",
+          formatter = "per_second",
+        },
+      },
+    },
+    { type = "list_box", source = "can_burn" },
+    { type = "list_box", source = "fuel_catgories", default_state = "hidden" },
+    { type = "list_box", source = "unlocked_by" },
+    { type = "list_box", source = "placed_by" },
   },
   group = {
     { type = "list_box", source = "fluids" },
@@ -931,6 +970,7 @@ constants.prototypes.filtered_entities = {
     { filter = "type", type = "furnace" },
     { filter = "type", type = "rocket-silo" },
   },
+  generator = { { filter = "type", type = "generator" } },
   lab = { { filter = "type", type = "lab" } },
   mining_drill = { { filter = "type", type = "mining-drill" } },
   offshore_pump = { { filter = "type", type = "offshore-pump" } },
@@ -990,6 +1030,7 @@ constants.tooltips = {
     { type = "plain", source = "group", formatter = "object", options = { hide_glyph = true } },
   },
   fuel_category = {},
+  generator = {},
   group = {},
   item = {
     { type = "plain", source = "stack_size", formatter = "number" },
