@@ -39,6 +39,8 @@ rb-add-to-favorites=Add to favorites
 rb-alt-click=Alt + click
 rb-attach-search-results-description=If enabled, clicking a search result will open an info page attached to the search GUI. Furthermore, clicking another search result will open it in that same page.\nYou can use the middle mouse button to open a detached info window at any time.
 rb-attach-search-results=Open search results in an attached info GUI
+rb-base-pollution=Base pollution
+rb-base-pollution-desc=The actual pollution rate may vary depending on the fluid burned.
 rb-burned-in=Burned in
 rb-burnt-result=Burnt result
 rb-burnt-result-of=Burnt result of
@@ -82,6 +84,7 @@ rb-equipment-properties=Equipment properties
 rb-expand=Expand
 rb-favorites=Favorites
 rb-fixed-recipe=Fixed recipe
+rb-fluid-consumption=Fluid consumption
 rb-fluid=Fluid
 rb-fluids=Fluids
 rb-format-amount=__1__ ×
@@ -92,6 +95,7 @@ rb-fuel-category=Fuel category
 rb-fuzzy-search-description=More lenient pattern matching for searches.\n[font=default-semibold]NOTE:[/font] After changing this setting, you will need to search again in order for the change to take effect.
 rb-fuzzy-search=Fuzzy search
 rb-general=General
+rb-generator=Generator
 rb-get-blueprint=Get blueprint
 rb-go-backward=Go backward
 rb-go-forward=Go forward
@@ -115,10 +119,13 @@ rb-list-box-label=__1__ (__2__)
 rb-logistic-radius=Logistic radius
 rb-machine=Machine
 rb-made-in=Made in
+rb-max-energy-production=Max energy production
+rb-maximum-temperature=Maximum temperature
 rb-max-rows=Max rows
 rb-middle-click=Middle click
 rb-mined-by=Mined by
 rb-mined-from=Mined from
+rb-minimum-temperature=Minimum temperature
 rb-mining-area=Mining area
 rb-mining-drill=Mining drill
 rb-mining-drills=Mining drills
