@@ -9,6 +9,7 @@ local equipment_category = require("scripts.database.equipment-category")
 local equipment = require("scripts.database.equipment")
 local fluid = require("scripts.database.fluid")
 local fuel_category = require("scripts.database.fuel-category")
+local generator = require("scripts.database.generator")
 local group = require("scripts.database.group")
 local item = require("scripts.database.item")
 local lab = require("scripts.database.lab")
@@ -51,6 +52,7 @@ function database.build()
   equipment(database, dictionaries)
 
   crafter(database, dictionaries, metadata)
+  generator(database, dictionaries)
   machine(database, dictionaries)
   mining_drill(database, dictionaries)
 
