@@ -2,6 +2,8 @@
 Version: 3.3.0
 Date: ????
   Features:
+    - Added new properties:
+      - [NEW] Generator: fluid consumption, minimum / maximum temperatures, max power production, base pollution, can burn, unlocked by, and placeable by
     - Added Korean locale (#97) (x2605)
     - Added visual mode to the search GUI, providing a more vanilla-like search interface
       - This interface can only show items and fluids
